# CS-4414

hw1/: main  main.cpp  myFile
hw2/starter/: .gitignore  CityNode.cpp  CityNode.hpp  CityPopulationAnalysis  SinglyLinkedList.cpp  SinglyLinkedList.hpp  main.cpp  output.csv  output_10_to_20.csv  part1_test.cpp  part2_test.cpp  world_population_by_city_2024.csv
hw3/starter/: Animal.cpp  Animal.hpp  CMakeLists.txt  Gene.cpp  Gene.hpp  GeneticTree.cpp  GeneticTree.hpp  HW3-4414.code-workspace  geneDist  hw3.cpp  main  main2  main3
hw3/starter/geneDist.dSYM/Contents/: Info.plist
hw3/starter/geneDist.dSYM/Contents/Resources/DWARF/: geneDist
hw3/starter/main2.dSYM/Contents/Resources/DWARF/: main2
hw3/starter/main3.dSYM/Contents/Resources/DWARF/: main3
hw3/wc++/: compile.sh  utils.cpp  utils.hpp  wc++.cpp  word_counter.cpp  word_counter.hpp
hw4/: BigNum.cpp  BigNum.hpp  CMakeLists.txt  gmon.out  main.cpp  tester.cpp  tester.txt
